--- a/site/sass/globals/_functions.scss
+++ b/site/sass/globals/_functions.scss
@@ -11,20 +11,45 @@
   @return math.div($px, $base-font-size) * 1rem;
 }
 
-/**
-  @desc Scale a value from one screen width to another based on the difference between the minimum
-      and maximum values. Requires clamp() support.
-  @param {length} $min-width: screen size to begin scaling.
-  @param {length} $max-width: screen size at which scaling will end.
-  @param {length} $min-value: Low value of clamp in the same unit as the max value.
-  @param {length} $max-value: High value of clamp in the same unit as the min value.
-  @example <caption>Between screen sizes of 744px and 1140px, linearly scale the padding from 20px to 40px.</caption>
-  .selector {
-    padding: fluid(744px, 1140px, 20px, 40px);
-  }
-  @returns {clamp($min-value, <responsive-value>, $max-value)}
+/*
+  @desc  Cast a value to a rem or em if necessary.
+
+  @param {length | number} $length - A px length or unitless number.
+  @param {boolean} $rem (optional) - Cast the provided px length or unitless number to a rem. When false, casts to em instead.
 */
-@function fluid($min-width, $max-width, $min-value, $max-value) {
+@function cast($length, $rem: true) {
+  $casted: $length;
+  @if unitless($length) {
+    $casted: if($rem, pxRem($length * 1px), pxEm($length * 1px));
+  } @else {
+    $casted: if($rem, pxRem($length), pxEm($length));
+  }
+  @return $casted;
+}
+
+//  @desc Scale a value from one screen width to another based on the difference between the minimum
+//    and maximum values. Requires clamp() support.
+//  @param {length()} $widths - List of lengths, in px, representing the range to scale between the min and max values.
+//  @param {length()} $values - List of lengths, in px, representing the min and max values to scale between.
+//  @param {boolean} $rem (optional) - output units in rems. When false, outputs units in ems.
+//  @example <caption>Between screen sizes of 744px and 1140px, linearly scale the padding from 20px to 40px.</caption>
+//  .selector {
+//    padding: fluid((744px 1140px), (20px 40px));
+//  }
+//  @returns clamp($min-value, <responsive-value>, $max-value)
+@function fluid($widths, $values, $rem: true) {
+  $params: (
+    'min-width': cast(nth($widths, 1), $rem),
+    'max-width': cast(nth($widths, 2), $rem),
+    'min-value': cast(nth($values, 1), $rem),
+    'max-value': cast(nth($values, 2), $rem),
+  );
+
+  $min-width: map-get($params, 'min-width');
+  $max-width: map-get($params, 'max-width');
+  $min-value: map-get($params, 'min-value');
+  $max-value: map-get($params, 'max-value');
+
   $width-difference: math.div(1, $max-width - $min-width);
   $value-difference: $max-value - $min-value;
   $rate: $width-difference * $value-difference;
