--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -57,7 +57,7 @@ hideNewsletter: true
   </div>
 
   <!-- Subscribe -->
-  <div class="wrapper wrapper--no-bottom wrapper--padded">
+  <div class="wrapper wrapper--padding wrapper--padded wrapper--full-bleed wrapper__background--dark">
     {{ callOut(l10n.newsletter.subscribe.content, l10n.newsletter.subscribe.cta) }}
   </div>
 
