--- a/site/sass/globals/_colors.scss
+++ b/site/sass/globals/_colors.scss
@@ -41,6 +41,7 @@ $google-colors: (
   'green-100': #ceead6,
   'green-50': #e6f4ea,
   'grey-900': #202124,
+  'grey-850': #262626,
   'grey-800': #3c4043,
   'grey-700': #5f6368,
   'grey-600': #80868b,
