--- a/site/sass/components/_wrapper.scss
+++ b/site/sass/components/_wrapper.scss
@@ -12,8 +12,8 @@
   $max-width: 1024px;
   $scaler: math.div(math.div($max-width, 100), 1vw);
 
-  $block-spacing-s: 5.75rem;
-  $block-spacing-l: 7.5rem;
+  $block-spacing-s: 4.5rem;
+  $block-spacing-l: 5rem;
   $inline-spacing-s: 3.75rem;
   $inline-spacing-l: 5rem;
 
@@ -194,6 +194,10 @@
       &:focus {
         color: var(--blue-900);
       }
+    }
+
+    &--dark {
+      background-color: var(--grey-850);
     }
   }
 
