--- a/site/_components/item-grid.njk
+++ b/site/_components/item-grid.njk
@@ -10,6 +10,7 @@
     @param {number} modifiers.shapeOn: Index of the nth item of the grid that will have a shape in the background.
         A value equals to 0 will turn off the shape. Defaults to 0.
     @param {string} modifiers.variant: If 'icon', it will render the icon-card. if 'subnav' it will render card-subnav. if 'community' it will render external-community.
+    @param {string} modifiers.subtitle: Text for a subtitle beneath the primary title.
 
     @param {string} locale: Code for the current locale, used when 'modifiers.variant' is 'subnav'
 
@@ -17,9 +18,15 @@
  #}-->
 {% from 'external-community.njk' import externalCommunity %} {% from 'card-subnav.njk' import cardSubnav %} {% from 'icon-card.njk' import iconCard %} {% from 'card.njk' import card %} {% macro itemGrid(title, items, modifiers, locale, defaultText) %} {% if items.length > 0 %}
 <section class="item-grid {{modifiers.custom}} {{'item-grid--icon-card' if modifiers.variant == 'icon'}} {{ 'item-grid--subnav' if modifiers.variant == 'subnav' }} {{'item-grid--community' if modifiers.variant == 'community'}} {{'item-grid--circled' if modifiers.shapeOn }}">
-  <h3 class="item-grid__title type--h3">{{title}}</h3>
+  <h3 class="item-grid__title type--h1">{{title}}</h3>
+  {% if modifiers.subtitle %}<h4 class="type--large item-grid__subtitle">{{modifiers.subtitle}}</h4> {% endif %}
   <div class="item-grid__content">
     {% for item in items %} {% if modifiers.variant == 'icon' %} {{iconCard(item, defaultText)}} {% elif modifiers.variant == 'subnav' %} {% if item.icon and item.desc %} {{cardSubnav(item, locale)}} {% endif %} {% elif modifiers.variant == 'community' %} {{externalCommunity(item.logo, item.cta)}} {% else %} {{ card(item) }} {% endif %} {% endfor %}
   </div>
+  {% if modifiers.cta %}
+  <footer class="item-grid__footer">
+    <a class="cta cta--medium" href="{{modifiers.cta.url}}">{{modifiers.cta.text}}</a>
+  </footer>
+  {% endif %}
 </section>
 {% endif %} {% endmacro %}
