--- a/site/_components/external-community.njk
+++ b/site/_components/external-community.njk
@@ -3,15 +3,23 @@
 
   Arguments:
     @param {string} logo: Logo path.
+    @param {string} topic: Community topic
     @param {object} cta: Object containing the following attributes.
     @param {string} url: CTA url.
     @param {string} text: CTA text.
  #}-->
-{% from 'icon.njk' import icon %} {% macro externalCommunity(logo, cta) -%}
-<figure class="external-community">
-  <img class="external-community__logo" src="{{logo}}" aria-hidden="true" alt="" />
-  <figcaption class="external-community__copy-wrapper">
-    <a href="{{cta.url}}" class="cta cta--link">{{cta.text}}</a>
-  </figcaption>
-</figure>
+{% from 'icon.njk' import icon %} {% macro externalCommunity(logo, topic, cta) -%}
+<a class="external-community" href="{{cta.url}}">
+  <figure class="external-community__liner">
+    <img class="external-community__logo" src="{{logo}}" aria-hidden="true" alt="" />
+    <figcaption class="external-community__copy-wrapper">
+    {% if topic %}
+      <strong>{{topic}}</strong>
+      <span>{{cta.text}}</span>
+    {% else %}
+      <strong>{{cta.text}}</strong>
+    {% endif %}
+    </figcaption>
+  </figure>
+</a>
 {%- endmacro %}
