--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -52,7 +52,7 @@ hideNewsletter: true
   </div>
 
   <!-- Community -->
-  <div id="home__community" class="wrapper--full-bleed wrapper--padding wrapper--padding-full-top wrapper__contained wrapper__background wrapper--padded">
+  <div id="home__community" class="wrapper wrapper--padding wrapper--padded">
     {{ itemGrid(l10n.home.community.title, l10n.community, l10n.home.community.modifiers) }}
   </div>
 
