use flexFont, update pxCast, CTA unit adjustments

--- a/site/en/style-guide/typography/core.njk
+++ b/site/en/style-guide/typography/core.njk
@@ -30,41 +30,41 @@ fixed: |-
   <section class="style-guide__section">
     <h1 class="type--mega">Headline Mega</h1>
     <div class="type">
-      <p>Headline Mega linearly scales from <code>36px</code>/<code>45px</code> to <code>64px</code>/<code>80px</code> between screen sizes of <code>375px</code> and <code>1440px</code>. It's set in Google Sans with a font weight of <code>400</code>.</p>
+      <p>Headline mega linearly scales from <code>36px</code>/<code>41.4px</code> to <code>64px</code>/<code>73.6px</code>, with a medium size of <code>56px</code>/<code>64.4px</code>. It's set in Google Sans with a font weight of <code>400</code>.</p>
     </div>
   </section>
   <section class="style-guide__section">
     <h1 class="type--h1">Headline 1</h1>
     <div class="type">
-      <p>Headline 1 linearly scales from <code>28px</code>/<code>36.4px</code> to <code>48px</code>/<code>62.4px</code> between screen sizes of <code>375px</code> and <code>1440px</code>. It's set in Google Sans Display with a font weight of <code>400</code>.</p>
+      <p>Headline 1 linearly scales from <code>28px</code>/<code>36.4px</code> to <code>48px</code>/<code>62.4px</code>, with a medium size of <code>40px</code>/<code>52px</code>. It's set in Google Sans Display with a font weight of <code>400</code>.</p>
     </div>
   </section>
 
   <section class="style-guide__section">
     <h2 class="type--h2">Headline 2</h2>
     <div class="type">
-      <p>Headline 2 linearly scales from <code>24px</code>/<code>31.2px</code> to <code>38px</code>/<code>49.4px</code> between screen sizes of <code>375px</code> to <code>1440px</code>. It's set in Google Sans Display with a font weight of <code>400</code>.</p>
+      <p>Headline 2 linearly scales from <code>24px</code>/<code>28.8px</code> to <code>38px</code>/<code>45.6px</code>, with a medium size of <code>26px</code>/<code>31.2px</code>. It's set in Google Sans Display with a font weight of <code>400</code>.</p>
     </div>
   </section>
 
   <section class="style-guide__section">
     <h3 class="type--h3">Headline 3</h3>
     <div class="type">
-      <p>Headline 3 linearly scales from <code>20px</code>/<code>26px</code> to <code>30px</code>/<code>39px</code> between screen sizes of <code>375px</code> to <code>1440px</code>. It's set in Google Sans with a font weight of <code>400</code>.</p>
+      <p>Headline 3 linearly scales from <code>20px</code>/<code>26px</code> to <code>30px</code>/<code>39px</code>, with a medium size of <code>26px</code>/<code>33.8px</code>. It's set in Google Sans with a font weight of <code>400</code>.</p>
     </div>
   </section>
 
   <section class="style-guide__section">
     <h4 class="type--h4">Headline 4</h4>
     <div class="type">
-      <p>Headline 4 linearly scales from <code>16px</code>/<code>22.4px</code> to <code>22px</code>/<code>30.8px</code> between screen sizes of <code>375px</code> to <code>1440px</code>. It's set in Google Sans with a font weight of <code>400</code>.</p>
+      <p>Headline 4 linearly scales from <code>16px</code>/<code>22.4px</code> to <code>22px</code>/<code>30.8px</code>, with a medium size of <code>26px</code>/<code>36.4px</code>. It's set in Google Sans with a font weight of <code>400</code>.</p>
     </div>
   </section>
 
   <section class="style-guide__section">
     <h5 class="type--h5">Headline 5</h5>
     <div class="type">
-      <p>Headline 5 linearly scales from <code>14px</code>/<code>18.2px</code> to <code>18px</code>/<code>23.4px</code> between screen sizes of <code>375px</code> and <code>1440px</code>. It's set in Google Sans with a font weight of <code>500</code>.</p>
+      <p>Headline 5 linearly scales from <code>14px</code>/<code>16.8px</code> to <code>18px</code>/<code>21.6px</code>, with a medium size of <code>16px</code>/<code>19.2px</code>. It's set in Google Sans with a font weight of <code>500</code>.</p>
     </div>
   </section>
 
