video card styling

--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -61,6 +61,11 @@ hideNewsletter: true
     {{ callOut(l10n.newsletter.subscribe.content, l10n.newsletter.subscribe.cta) }}
   </div>
 
+  <!-- Videos -->
+  <div class="wrapper wrapper--no-bottom wrapper--padded">
+    {{ itemGrid(l10n.home.videos.title, l10n.home.videos.items, l10n.home.videos.modifiers) }}
+  </div>
+
   <!-- Footnotes -->
   <footer class="wrapper wrapper--full-bleed wrapper__background wrapper--no-bottom wrapper--padded wrapper__contained">
     {{ footnotes(l10n.home.footnotes.notes) }}
