--- a/site/_components/item-grid.njk
+++ b/site/_components/item-grid.njk
@@ -15,11 +15,11 @@
 
     @param {string} defaultText: Default text used when 'modifiers.variant' is 'icon'.
  #}-->
-{% from 'external-community.njk' import externalCommunity %} {% from 'card-subnav.njk' import cardSubnav %} {% from 'icon-card.njk' import iconCard %} {% from 'card.njk' import card %} {% macro itemGrid(title, items, modifiers, locale, defaultText) %} {% if items.length > 0 %}
-<section class="item-grid {{modifiers.custom}} {{'item-grid--icon-card' if modifiers.variant == 'icon'}} {{ 'item-grid--subnav' if modifiers.variant == 'subnav' }} {{'item-grid--community' if modifiers.variant == 'community'}} {{'item-grid--circled' if modifiers.shapeOn }}">
+{% from 'external-community.njk' import externalCommunity %} {% from 'card-subnav.njk' import cardSubnav %} {% from 'icon-card.njk' import iconCard %} {% from 'card.njk' import card %} {% from 'video-card.njk' import videoCard %} {% macro itemGrid(title, items, modifiers, locale, defaultText) %} {% if items.length > 0 %} 
+<section class="item-grid {{modifiers.custom}} {{'item-grid--icon-card' if modifiers.variant == 'icon'}} {{ 'item-grid--subnav' if modifiers.variant == 'subnav' }} {{'item-grid--community' if modifiers.variant == 'community'}} {{'item-grid--circled' if modifiers.shapeOn }} {{ 'item-grid--videos' if modifiers.variant == 'videos' }}">
   <h3 class="item-grid__title type--h3">{{title}}</h3>
   <div class="item-grid__content">
-    {% for item in items %} {% if modifiers.variant == 'icon' %} {{iconCard(item, defaultText)}} {% elif modifiers.variant == 'subnav' %} {% if item.icon and item.desc %} {{cardSubnav(item, locale)}} {% endif %} {% elif modifiers.variant == 'community' %} {{externalCommunity(item.logo, item.cta)}} {% else %} {{ card(item) }} {% endif %} {% endfor %}
+    {% for item in items %} {% if modifiers.variant == 'icon' %} {{iconCard(item, defaultText)}} {% elif modifiers.variant == 'subnav' %} {% if item.icon and item.desc %} {{cardSubnav(item, locale)}} {% endif %} {% elif modifiers.variant == 'community' %} {{externalCommunity(item.logo, item.cta)}} {% elif modifiers.variant == 'videos' %} {{ videoCard(item.video, item.capture) }} {% else %} {{ card(item) }} {% endif %} {% endfor %}
   </div>
 </section>
 {% endif %} {% endmacro %}
