community quote layout, cards

--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -51,6 +51,11 @@ hideNewsletter: true
     {{ heroCta(l10n.home.chromebook.content, l10n.home.chromebook.image, l10n.home.chromebook.cta) }}
   </div>
 
+  <!-- Developers -->
+  <div id="home__developers" class="wrapper wrapper--padding wrapper--padded">
+    {{ itemGrid(l10n.home.developers.title, l10n.home.developers.quotes, l10n.home.developers.modifiers) }}
+  </div>
+
   <!-- Community -->
   <div id="home__community" class="wrapper--full-bleed wrapper--padding wrapper--padding-full-top wrapper__contained wrapper__background wrapper--padded">
     {{ itemGrid(l10n.home.community.title, l10n.community, l10n.home.community.modifiers) }}
