swap GS display for GS text, replace roboto

--- a/site/en/style-guide/typography/core.njk
+++ b/site/en/style-guide/typography/core.njk
@@ -112,7 +112,7 @@ fixed: |-
     <small class="type--small">Small text</small>
     <div class="type">
       <p>
-        Small text is used for supplemental information usually towards the end of pages (e.g. sources, disclaimers, and tags), should be used with the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/small"><code>&lt;small&gt;</code></a> element, and its styling can be applied with the <code>.type--small</code> class. It's set in Roboto with a weight of <code>400</code>, colored using <code>--grey-700</code>, and is typeset at <code>12px</code>/<code>16px</code>.
+        Small text is used for supplemental information usually towards the end of pages (e.g. sources, disclaimers, and tags), should be used with the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/small"><code>&lt;small&gt;</code></a> element, and its styling can be applied with the <code>.type--small</code> class. It's set in Google Sans Text with a weight of <code>400</code>, colored using <code>--grey-700</code>, and is typeset at <code>12px</code>/<code>16px</code>.
       </p>
     </div>
   </section>
@@ -120,21 +120,21 @@ fixed: |-
   <section class="style-guide__section">
     <p class="type--label">Label text</p>
     <div class="type">
-      <p>Label text is as a descriptor for smaller interaction elements (e.g. article tags, TOC title, etc…) and its styling can be applied with the <code>.type--label</code> class. It's set in Roboto with a weight of <code>600</code>, colored using <code>--grey-900</code>, set in all caps, and is typeset at <code>11px</code>/<code>16px</code>.</p>
+      <p>Label text is as a descriptor for smaller interaction elements (e.g. article tags, TOC title, etc…) and its styling can be applied with the <code>.type--label</code> class. It's set in Google Sans Text with a weight of <code>600</code>, colored using <code>--grey-900</code>, set in all caps, and is typeset at <code>11px</code>/<code>16px</code>.</p>
     </div>
   </section>
 
   <section class="style-guide__section">
     <figcaption class="type--caption">Caption text.</figcaption>
     <div class="type">
-      <p>Caption text is used for image captions and its styling can be applied with the <code>.type--caption</code> class. It's set in Roboto with a weight of <code>400</code>, colored using <code>--grey-900</code>, and is typeset at <code>12px</code>/<code>16.8px</code>.</p>
+      <p>Caption text is used for image captions and its styling can be applied with the <code>.type--caption</code> class. It's set in Google Sans Text with a weight of <code>400</code>, colored using <code>--grey-900</code>, and is typeset at <code>12px</code>/<code>16.8px</code>.</p>
     </div>
   </section>
 
   <section class="style-guide__section">
     <p>This is <code class="type--code">Inline Code</code> inside some longer text.</p>
     <div class="type">
-      <p>Inline code is used to display monospaced text, usually code, in-line with other text or where other in-line text can go, and its styling can be applied with the <code>.type--code</code> class. It's set in Roboto Mono with a weight of <code>400</code>, colored using <code>--grey-700</code>, has a background of <code>--grey-100</code>, padding of <code>4px</code>, and is typeset at <code>14px</code>/<code>20px</code>.</p>
+      <p>Inline code is used to display monospaced text, usually code, in-line with other text or where other in-line text can go, and its styling can be applied with the <code>.type--code</code> class. It's set in Google Sans Text Mono with a weight of <code>400</code>, colored using <code>--grey-700</code>, has a background of <code>--grey-100</code>, padding of <code>4px</code>, and is typeset at <code>14px</code>/<code>20px</code>.</p>
     </div>
   </section>
 </section>
